# opencode-cli-mcp

./: .cursorrules  .gitignore  .mcpbignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  fleet-registry.json  glama.json  justfile  llms-full.txt  llms.txt  pyproject.toml  start.ps1
.opencode/tools/: fleet.ts  providers.ts  runs.ts  sessions.ts  system.ts  tools.ts
api/: main.py  settings.json
api/routes/: capabilities.py  docs.py  fleet.py  opencode_tools.py  proxy.py  settings.py  system.py  tools.py
docs/: ASSESSMENT_20260501_025825.md.bak  IMPROVEMENTS_2026-05-02.md  USAGE.md  advanced-usage.md  integration-guide.md
src/opencode_cli_mcp/: client.py  job_store.py  registry.py  server.py
src/opencode_cli_mcp/tools/: __init__.py  agent.py  runs.py  sessions.py  status.py
tests/: test_api_routes.py  test_client.py  test_job_store.py  test_registry.py  test_server.py
web_sota/: generate_icons.py  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web_sota/src/: App.tsx  Layout.tsx  index.css  store.ts
web_sota/src/pages/: ApiDocs.tsx  AppsHub.tsx  Chat.tsx  Dashboard.tsx  Help.tsx  OpenCodeTools.tsx  Projects.tsx  Sessions.tsx  Settings.tsx  StatusAudit.tsx  ToolsHub.tsx
web_sota/src/services/: api.ts
