[project]
name = "opencode-cli-mcp"
version = "0.1.0"
description = "MCP server wrapping opencode CLI (opencode serve) for AI agent orchestration"
authors = [{ name = "Sandra Schipal" }]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2",
    "httpx>=0.28",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
]

[project.scripts]
opencode-cli-mcp = "opencode_cli_mcp.server:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
