[project]
name = "opencode-cli-mcp"
version = "0.1.0"
description = "MCP server wrapping opencode CLI (opencode serve) for AI agent orchestration"
authors = [{ name = "Sandra Schipal" }]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2",
    "httpx>=0.28",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
opencode-cli-mcp = "opencode_cli_mcp.server:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "psutil>=6.0",
]
